# simple-calculator-demo

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  index.html  learn.html  pyproject.toml  requirements.txt  tox.ini
.github/: copilot-instructions.md
.github/workflows/: claude-code-review.yml  claude.yml  codeql.yml  deploy-learning.yml  pr.yml  tests.yml
.rules/: calculator-project.mdc  commit-workflow.sh  pre-commit-hook.mdc
GuitaristForEver/: index.html
allure-report-test/: index.html  summary.json
allure-report-test/widgets/: charts.json  timeline.json  tree.json
allure-report-test/widgets/default/: nav.json
calculator/: calculator.py
docs/: ALLURE.md  ARCHITECTURE.md  CI-CD.md  GITHUB-PAGES.md  STRUCTURE.md  TROUBLESHOOTING.md  UV.md  index.html
docs/learn/: index.html  learn.css  learn.js
guides/: 01-getting-started.md  02-understanding-the-code.md  03-running-tests.md  04-pre-commit-hooks.md  05-ci-cd-basics.md  06-advanced-features.md  README.md
prompts/: README.md  ci-cd-general.md
src/: __init__.py  calculator.py
tests/: test_calculator.py
